# DLIV-semantic-segmentation-of-wounds

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
report/: references.bib  report.tex
report/doc/: 101-introduction.tex  102-dataset.tex  103-state-of-the-art.tex  104-wsnet.tex  105-results.tex  201-general-information.tex
src/: Medical_CNN_Linknet-Local.ipynb  WSNET_models.ipynb  helper.py  test-tensorflow.py
src/WSNET/: Medical_CNN_FPN.py  Medical_CNN_FPN_Local.py  Medical_CNN_Linknet.py  Medical_CNN_Linknet_Local.py  Medical_CNN_PSPNET.py  Medical_CNN_PSPNET_local.py  Medical_CNN_Unet.py  Medical_CNN_Unet_Local.py  Model_CNN_FPN_Local.py  README.md  evaluate_all_models.py  evaluate_all_models_with_augmentations.py  evaluate_densenet.py  evaluate_dfuc.py  evaluation_augmentations.json  evaluation_results.md  evaluation_results_densenet.md  evaluation_results_dfuc.md  global_global_model.py  global_local_model.py  global_local_model_mixed.py  global_model.py  helper.py  local_model.py  train_all_models.py  wsnet.py
src/WSNET/evaluation/: augmentations_for_testing.py  evaluate_all_models.py  evaluate_all_models_with_augmentations.py  evaluate_densenet.py  evaluate_dfuc.py  helper.py
src/WSNET/models/: global_global_model.py  global_local_model.py  global_local_model_mixed.py  global_model.py  local_model.py
src/WSNET/results/: evaluation_results.md  evaluation_results_densenet.json
